2019-02-11 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: add missing parameter errorCode to the render methods of DeleteView and EditView.
    * bugfix: use flexform_ds_pi.xml and not flexform_ds_pi.xlf

2019-02-09 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for PHP 7.2: replace the preview mode constants MODE_PREVIEW and MODE_NORMAL with namespace constants \JambageCom\Agency\Constants\Mode PREVIEW and NORMAL
    * bugfix to the responsive template file: the TermsAcknowledged parts have been missing for the CREATE, INVITE and EDIT subparts.

2019-02-06 Franz Holzinger  <franz@ttproducts.de>
    * bugfix to Localization

2019-02-06 Franz Holzinger  <franz@ttproducts.de>
    * new base class: change the Localization class from \JambageCom\Div2007\Base\LocalisationBase to TranslationBase. Change the methods of the $languageObj object accordingly: loadLL => loadLocalLang, getLLkey => getLocalLangKey, getLL => getLabel

2018-11-26 Franz Holzinger  <franz@ttproducts.de>
    * Extract file tt_content.php from ext_tables.php

2018-11-24 Franz Holzinger  <franz@ttproducts.de>
    * Readd file class.tx_agency.php which is needed until TYPO3 7.6 for addPItoST43.

2018-11-13 Franz Holzinger  <franz@ttproducts.de>
    * Fix PHP syntax error

2018-09-25 Franz Holzinger  <franz@ttproducts.de>
    * Please help to fix the wrong translation at: https://translation.typo3.org/de/TYPO3.ext.agency/translate/pi/locallang.xlf#filter=all&unit=4571234 .
    * bugfix for notification emails: The storage page of the plugin has not been considered.
    * feature responsive template: replace several HTML tags by div tags with css classes.

2018-09-05 Franz Holzinger  <franz@ttproducts.de>
    * modify composer.json: use namespace typo3-ter/div2007 instead of jambagecom/div2007

2018-07-18 Franz Holzinger  <franz@ttproducts.de>