@@ -24,7 +24,7 @@
   ],
   "require": {
     "typo3/cms-core": ">=6.2.0,<8.99.99",
-    "jambagecom/div2007": ">=1.10.13"
+    "jambagecom/div2007": ">=1.10.17"
   },
   "autoload": {
     "psr-4": {
