@@ -12,10 +12,9 @@ Helmut Hummel, TYPO3 Security Team
 Oliver Klee <typo3-coding@oliverklee.de>: several bug fixes and code improvements. This extension incorporates a script borrowed from extension Salutation Switcher (salutation switcher) to allow to set informal salutation mode.
 Dylan Kuhn <dkuhn1@yahoo.com>: Sharing his ideas and code for extending this extension with TCA-driven fields.
 Ries van Twisk <ries@vantwisk.nl>: Sharing of his code to support fields with multiple checkboxes and to incorporate additional hooks.
-Bernhard Kraft <kraftb@kraftb.at>: This extension incorporates some code taken from the extension KB MD5 FE Password (kb_md5fepw).
 Steve Webster <steviewebsite@msn.com>: Sharing of his code for the short URL feature.
 David Bocher <david_bocher@yahoo.fr>: Sharing his code for honoring TCA renderMode property.
-Jens Hirschfeld <Jens.Hirschfeld@KeepOut.de>: Sharing of his code for strWrap to overrideValues.
+Jens Hirschfeld <Jens.Hirschfeld@KeepOut.de>: Sharing of his code for stdWrap to overrideValues.
 Martin Kutschker (Masi) http://activesolution.at/ from Austria: Sharing of his code for enhanced label markers 'v_...', changes to label markers
 Pierre Lamoureux: Improvements for security token
 
