@@ -16,7 +16,7 @@ $EM_CONF[$_EXTKEY] = array(
         'depends' => array(
             'php' => '5.5.0-7.99.99',
             'typo3' => '6.2.0-8.99.99',
-            'div2007' => '1.10.13-0.0.0',
+            'div2007' => '1.10.17-0.0.0',
         ),
         'conflicts' => array(
             'sr_feuser_register' => '',
